chore: release version 5.0.0